<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.permission.PermissionFragment">

        <TextView
            android:id="@+id/permission_type_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/permission_required"
            android:textColor="@color/red"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/permission_description_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/permission_description_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/permission_description"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="42dp"
            android:textStyle="italic"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:layout_margin="20dp"
            android:text="@string/continue_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:backgroundTint="@color/blue_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>